2007-05-29  J. Tang  <jtang@tresys.com>

	* ./configure no longer has --enable-sefs flag, for libselinux is
	required to build SETools.  (The kernel does need to have SELinux
	running, though.)  Therefore, libsefs is now always built.

	* apol converted to use the SWIG interface for Tcl.

	* libapol/src/types-relation-analysis.c
	(apol_types_relation_domain): Domain transition table was not
	correctly reset when intermixing calls between
	apol_types_relation_analysis_do() and
	apol_domain_trans_analysis_do().
	
2007-05-22  J. Tang  <jtang@tresys.com>

	* Added infoflow defines to apol.i.  Added apol_file_find_path()
	to apol.i.  They were inadvertently missing from the interface
	file.

2007-05-22  J. Mowery  <jmowery@tresys.com>

	* Renamed apol_permmap_*() to apol_policy_*_permmap() to
	  correctly reflect the fact that the policy owns the permmap.

2007-05-21  J. Mowery  <jmowery@tresys.com>

	* Renamed apol_policy_domain_trans_table_build() and
	  apol_domain_trans_table_reset() to apol_policy_build_domain_trans_table()
	  and apol_polciy_reset_domain_trans_table() respectively.  This change
	  reflects the correct namespace for these operations.

2007-05-18  J. Mowery  <jmowery@tresys.com>

	* Deprecated qpol_policy_extend(); this function is called
	  automatically by qpol_policy_open* and qpol_policy_rebuild()
	  and therefore does not need to be called separately.

2007-05-16  J. Tang  <jtang@tresys.com>

	* Right-clicking an apol results display now pops up a menu, that
	allows the user to copy and to select all.

	* libapol/swig/apol.i: Within the SWIG interfaces, there now
	exists an object "apol_ip_t", that represents both an IP address
	and a protocol.  apol_str_to_internal_ip() returns an apol_ip_t,
	which may then be used when setting an apol_nodecon_query_t.  Note
	that this only affects the SWIG generated libraries, not the
	original libapol.

	* SETools now requires a C99 compliant C compiler.  The supplied