@@ -19,6 +19,7 @@ Karl MacMillan
 Frank Mayer
 Don Patterson
 Chris PeBenito
+Paul Rosenfeld
 Karen Vance
 Brandon Whalen
 Meggan Whalen
